[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Spielfeld.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Gegner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spieler.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Wand.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/score_a_point.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/start_set.wav" type="AudioStream" id=7]
[ext_resource path="res://Fonts/Arcade.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 300 )

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Font/fallback", "Resource", "Settings" ]

[node name="Spielfeld" type="Node"]

script = ExtResource( 1 )

[node name="Spiel_Objekte" type="Node2D" parent="." index="0"]

[node name="Ball" parent="Spiel_Objekte" index="0" instance=ExtResource( 2 )]

position = Vector2( 518, 304 )
_sections_unfolded = [ "Transform", "collision" ]
speed = 600

[node name="Gegner" parent="Spiel_Objekte" index="1" instance=ExtResource( 3 )]

position = Vector2( 960, 300 )

[node name="Spieler" parent="Spiel_Objekte" index="2" instance=ExtResource( 4 )]

position = Vector2( 64, 300 )
speed = 300

[node name="Level_Objekte" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="Wand" parent="Level_Objekte" index="0" instance=ExtResource( 5 )]

position = Vector2( 512, 16 )

[node name="Wand2" parent="Level_Objekte" index="1" instance=ExtResource( 5 )]

position = Vector2( 512, 583 )

[node name="Control_Objekte" type="Node" parent="." index="2"]

[node name="Tor_Spieler" type="Area2D" parent="Control_Objekte" index="0"]

editor/display_folded = true
position = Vector2( -16, 300 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control_Objekte/Tor_Spieler" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]

[node name="Tor_Gegner" type="Area2D" parent="Control_Objekte" index="1"]

position = Vector2( 1040, 300 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control_Objekte/Tor_Gegner" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]

[node name="Reset_Timer" type="Timer" parent="Control_Objekte" index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Sound_Tor" type="AudioStreamPlayer" parent="Control_Objekte" index="3"]

stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sound_Start" type="AudioStreamPlayer" parent="Control_Objekte" index="4"]

stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="HUD" type="Node" parent="." index="3"]

[node name="Punktestand_Gegner" type="Label" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 712.0
margin_top = 50.0
margin_right = 752.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Punktestand_Spieler" type="Label" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 50.0
margin_right = 352.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "custom_fonts", "custom_styles" ]

[node name="CanvasModulate" type="CanvasModulate" parent="." index="4"]

color = Color( 0.241714, 0.847656, 0.521016, 1 )

[connection signal="position_changed" from="Spiel_Objekte/Ball" to="Spiel_Objekte/Gegner" method="_on_ball_position_changed"]

[connection signal="body_entered" from="Control_Objekte/Tor_Spieler" to="." method="_on_Tor_Spieler_body_entered"]

[connection signal="body_entered" from="Control_Objekte/Tor_Gegner" to="." method="_on_Tor_Gegner_body_entered"]

[connection signal="timeout" from="Control_Objekte/Reset_Timer" to="." method="_on_Reset_Timer_timeout"]


